--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
 <title>DangerMaps</title>
 <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
-<body>
+<body style="text-align:center">
 
 <h1>DangerMaps</h1>
 
 <img src="https://github.com/dangermaps/dangermaps.github.io/raw/master/Screenshot.png?raw=true" align="center" alt="dangermaps map" />
+
+<h2>Source Code</h2>
+
+<a href="https://github.com/dangermaps/dangermaps.github.io/tree/master/web">github.com/dangermaps/dangermaps.github.io/tree/master/web</a>
 
 </body>
 </html>
