--- a/index.html
+++ b/index.html
@@ -10,11 +10,40 @@
 
 <h1>DangerMaps</h1>
 
-<img src="https://github.com/dangermaps/dangermaps.github.io/raw/master/Screenshot.png?raw=true" align="center" alt="dangermaps map" />
+<img
+    src="https://github.com/dangermaps/dangermaps.github.io/raw/master/Screenshot.png?raw=true"
+     align="center"
+     alt="dangermaps map"
+     style="max-width:80%"
+/>
 
 <h2>Source Code</h2>
 
 <a href="https://github.com/dangermaps/dangermaps.github.io/tree/master/web">github.com/dangermaps/dangermaps.github.io/tree/master/web</a>
+
+<h2>Paper</h2>
+
+<a href="https://arxiv.org/abs/2503.14103">https://arxiv.org/abs/2503.14103</a>
+
+<br />
+<br />
+Citation:
+
+<div style="max-width:600px;margin:0 auto;text-align:left">
+<code>
+@misc{oppenlaender2025dangermapspersonalizedsafetyadvice,<br />
+    &nbsp;&nbsp;&nbsp;title={DangerMaps: Personalized Safety Advice for Travel in Urban Environments using a Retrieval-Augmented Language Model},<br />
+    &nbsp;&nbsp;&nbsp;author={Jonas Oppenlaender},<br />
+    &nbsp;&nbsp;&nbsp;year={2025},<br />
+    &nbsp;&nbsp;&nbsp;eprint={2503.14103},<br />
+    &nbsp;&nbsp;&nbsp;archivePrefix={arXiv},<br />
+    &nbsp;&nbsp;&nbsp;primaryClass={cs.HC},<br />
+    &nbsp;&nbsp;&nbsp;url={https://arxiv.org/abs/2503.14103},<br />
+    &nbsp;&nbsp;&nbsp;doi={10.48550/arXiv.2503.14103},<br />
+  }
+</code>
+</div>
+
 
 </body>
 </html>
